--- a/index.html
+++ b/index.html
@@ -43,18 +43,18 @@
                     <div class="col-lg-7 social-left-col">
                         <div class="social-left-area">
                             <ul>
-                                <li><a href="#"><i class="fas fa-phone-alt"></i>+12 1234 5678</a></li>
-                                <li><a href="#"><i class="fas fa-location-arrow"></i>contact@paginale.com</a></li>
+                                <li><a href="tel:+21252222222"><i class="fas fa-phone-alt"></i>+212 5 222 222</a></li>
+                                <li><a href="mailto:contact@paginale.com"><i class="fas fa-location-arrow"></i>contact@paginale.com</a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-lg-5 text-right social-right-col">
                         <div class="social-right-area">
                             <ul>
-                                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                                <li><a href="https://www.facebook.com/paginale"><i class="fab fa-facebook-f"></i></a></li>
+                                <li><a href="https://www.instagram.com/paginale_tech/?hl=fr"><i class="fab fa-instagram"></i></a></li>
+                                <li><a href="https://twitter.com/paginale_tech"><i class="fab fa-twitter"></i></a></li>
+                                <li><a href="https://ma.linkedin.com/company/paginale"><i class="fab fa-linkedin-in"></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -80,7 +80,7 @@
                                 <li><a href="#pricing-area">Pricing</a></li>
                                 <li><a href="#team-area">Our Team</a></li>
                                 <li><a href="#testimonial-area">Testimonial</a></li>
-                                <li class="menu-btn"><a href="#contact" class="button-btn">Get a quote</a></li>
+                                <li class="menu-btn"><a href="#contact" class="button-btn">Estimate your service</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -102,7 +102,7 @@
                 <div class="col-lg-6 hero-content-col">
                     <div class="hero-content-area">
                         <h1 class="wow animate__animated animate__fadeInRight" data-wow-duration="2s" data-wow-delay="0.2s"><span>Paginale</span>Road To A Digital Future</h1>
-                        <p class="wow animate__animated animate__fadeInRight" data-wow-duration="2s" data-wow-delay="0.2s">discover our IT services and solutions</p>
+                        <p class="wow animate__animated animate__fadeInRight" data-wow-duration="2s" data-wow-delay="0.2s">Discover our IT services and solutions, and join the community...</p>
                         <div class="hero-btn-area wow animate__animated animate__fadeInRight" data-wow-duration="2.5s" data-wow-delay="0.2.5s">
                             <a href="#" class="button-btn">Get Started</a>
                         </div>
@@ -429,7 +429,7 @@
                         <ul class="team-social-area">
                             <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                             <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                            <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
                             <li><a href="#"><i class="fas fa-envelope"></i></a></li>
                         </ul>
                     </div>
@@ -680,16 +680,15 @@
                     <div class="single-footer-item">
                         <h4>Contact</h4>
                         <ul class="footer-contact-info">
-                            <li><a href="#">+12 1234 56789</a></li>
-                            <li><a href="#">info@compamy.com</a></li>
-                            <li><a href="#">services@company.com</a></li>
-                            <li><a href="#">12-Park Street , Lakeview,NY-1206, USA</a></li>
+                            <li><a href="tel:+212521222222">+212 521 222 222</a></li>
+                            <li><a href="mailto:contact@paginale.com">contact@paginale.com</a></li>
+                            <li><a href="#">42, Adelkarim kattabi, Marrakesh, Morocco</a></li>
                         </ul>
                         <ul class="footer-social-area">
-                            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                            <li><a href="https://www.facebook.com/paginale"><i class="fab fa-facebook-f"></i></a></li>
+                            <li><a href="https://www.instagram.com/paginale_tech/?hl=fr"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="https://twitter.com/paginale_tech"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="https://ma.linkedin.com/company/paginale"><i class="fab fa-linkedin-in"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -736,5 +735,18 @@
     <!-- js link -->
 
 </body>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WL38GJSYFN"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-WL38GJSYFN');
+</script>
 
 </html>
