--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>PAGINALE | ROAD TO THE FUTURE</title>
+    <title>Paginale - IT Services, Mobile apps, Web2.0 and Web3.0 Apps</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Paginale is an IT company that provides IT services and solutions of all types, construction of mobile applications and web applications, and also offers web3.0 services such as building tokens and crypto games.">
+
     <!-- css link -->
     <!-- favicon icon -->
     <link rel="icon" type="images/png" href="images/favicon.png" />
