--- a/index.html
+++ b/index.html
@@ -135,28 +135,36 @@
                     <div class="services-single-item wow animate__animated animate__fadeInUp" data-wow-duration="1.5s">
                         <div class="image"><img src="images/illustration/3.svg" style="max-height: 100px;" alt="mobile apps and web developement"></div>
                         <h3>Mobile apps and web 2.0</h3>
-                        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using</p>
+                        <p>You have a business that you want to migrate online, we will create your website, and your custom mobile application, with an attractive design.
+                        </p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 services-item-col">
                     <div class="services-single-item active wow animate__animated animate__fadeInUp" data-wow-duration="1.9s">
                         <div class="image"><img src="images/illustration/8.svg" style="max-height: 100px;" alt="mobile apps and web developement"></div>
                         <h3>Web 3.0</h3>
-                        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using</p>
+                        <p>We're here to help you build your token, or a Dapp, and anything that sticks in your mind on any blockchain (Ethereum, Solana, Polygon...)</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 services-item-col">
                     <div class="services-single-item wow animate__animated animate__fadeInUp" data-wow-duration="2s">
                         <div class="image"><img src="images/illustration/5.svg" style="max-height: 100px;" alt="mobile apps and web developement"></div>
                         <h3>Digtal Marketing</h3>
-                        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using</p>
+                        <p>Your business is online, but you can't reach your audience? our digital marketing department is there to boost your traffic and help you achieve your goals.</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 services-item-col">
                     <div class="services-single-item wow animate__animated animate__fadeInUp" data-wow-duration="2.5s">
                         <div class="image"><img src="images/illustration/6.svg" style="max-height: 100px;" alt="mobile apps and web developement"></div>
                         <h3>Consulting</h3>
-                        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using</p>
+                        <p>Our goal is to help you in your business, whatever your business, we are here to suggest the best solutions and technologies to guarantee high digital quality.</p>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4 services-item-col">
+                    <div class="services-single-item wow animate__animated animate__fadeInUp" data-wow-duration="2.5s">
+                        <div class="image"><img src="images/illustration/video_games.svg" style="max-height: 100px;" alt="mobile apps and web developement"></div>
+                        <h3>Video Games</h3>
+                        <p>The video game world is growing day by day. Our video game team builds 2D or 3D games, mobile or desktop, online or offline, using the latest technologies.</p>
                     </div>
                 </div>
 
@@ -186,35 +194,39 @@
                     <div class="services-single-item wow animate__animated animate__fadeInUp" data-wow-duration="1.5s">
                         <div class="image"><img src="images/illustration/7.svg" style="max-height: 100px;" alt="mobile apps and web developement"></div>
                         <h3>E-Commerce</h3>
-                        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using</p>
+                        <p>70% of our solutions are intended for online sellers, on different platforms, and mainly <a href="shopify.com">Shopify</a>.
+                        </p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 services-item-col">
                     <div class="services-single-item active wow animate__animated animate__fadeInUp" data-wow-duration="1.9s">
                         <div class="image"><img src="images/illustration/4.svg" style="max-height: 100px;" alt="mobile apps and web developement"></div>
                         <h3>Project Management</h3>
-                        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using</p>
+                        <p>the key to success and the proper organization and management of the project and the business, we offer CRM management solutions and tailor-made modules. Focus on your traffic and leave the management tasks to us.
+                        </p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 services-item-col">
                     <div class="services-single-item active wow animate__animated animate__fadeInUp" data-wow-duration="1.9s">
                         <div class="image"><img src="images/illustration/team.svg" style="max-height: 100px;" alt="mobile apps and web developement"></div>
                         <h3>Training</h3>
-                        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using</p>
+                        <p>You need to train your employees, we are here to give them what they need to progress in their task. We provide training in all technologies and computer softwares
+                        </p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 services-item-col">
                     <div class="services-single-item wow animate__animated animate__fadeInUp" data-wow-duration="2s">
                         <div class="image"><img src="images/illustration/architecture.svg" style="max-height: 100px;" alt="mobile apps and web developement"></div>
-                        <h3>Architecture</h3>
-                        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using</p>
+                        <h3>Design And Architecture</h3>
+                        <p>Good architecture means good scaling and success of your online business, and that's what our IT architects do. The latest implementations and technologies are available from us.
+                        </p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 services-item-col">
                     <div class="services-single-item wow animate__animated animate__fadeInUp" data-wow-duration="2.5s">
                         <div class="image"><img src="images/illustration/dapp.svg" style="max-height: 100px;" alt="mobile apps and web developement"></div>
-                        <h3>DApps</h3>
-                        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using</p>
+                        <h3>DApps And Blockchain</h3>
+                        <p>It's the future. Distributed applications based on blockchain technology have many advantages, including security and uniqueness. We process all kinds of applications on all known blockchain networks.</p>
                     </div>
                 </div>
 
@@ -620,7 +632,7 @@
             <div class="row contact-area-row wow animate__animated animate__zoomIn" data-wow-duration="1.5s">
                 <div class="col-lg-10 contact-form-col">
                     <form id="contact-form" class="atf-contact-form" method="POST" action="php/mail.php">
-                        <h3>Request a Quote</h3>
+                        <h3>Contact Us</h3>
                         <div class="name-email-input">
                             <input class="name-input" type="text" name="name" placeholder="Name*" required>
                             <input class="email-input" type="email" name="email" placeholder="valid email Address*" required>
