--- a/index.html
+++ b/index.html
@@ -79,9 +79,11 @@
                             <ul>
                                 <li><a href="#">Home</a></li>
                                 <li><a href="#services-area">Services</a></li>
-                                <li><a href="#pricing-area">Pricing</a></li>
-                                <li><a href="#team-area">Our Team</a></li>
-                                <li><a href="#testimonial-area">Testimonial</a></li>
+                                <li>
+                                    <a href="#team-area">Investors</a>
+                                </li>
+                                <li><a href="#testimonial-area">Career</a></li>
+                                <li><a href="#testimonial-area">Contact</a></li>
                                 <li class="menu-btn"><a href="#contact" class="button-btn">Estimate your service</a></li>
                             </ul>
                         </nav>
@@ -667,9 +669,8 @@
                         <h4>Links</h4>
                         <nav>
                             <ul class="footer-menu">
-                                <li><a href="#">FAQ</a></li>
+                                <li><a href="#">Home</a></li>
                                 <li><a href="#">Services</a></li>
-                                <li><a href="#">How it Work</a></li>
                                 <li><a href="#">What Our Client Say</a></li>
                                 <li><a href="#">Contact Us</a></li>
                             </ul>
