--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                 <div class="row align-items-center navigation-row">
                     <div class="col-lg-3 logo-col">
                         <div class="menu-logo-area">
-                            <!-- <a href="#">
-                                <img src="images/paginale_slogan.png" style="width: 200px;" alt="menu logo "></a> -->
+                            <a href="#">
+                                <img src="images/small_logo.png" style="" alt="menu logo "></a>
                         </div>
                     </div>
                     <div class="col-lg-9 menu-col align-self-center">
